# ScreenLeak-Detection

./: README.md
C#/: ScLeakageCmd.sln
C#/ScLeakage/: App.config  Form1.Designer.cs  Form1.cs  LOG.cs  Program.cs  ScLeakageCmd.csproj  ScreenSpecINI.cs  baseCalculation.cs  packages.config
C#/ScLeakage/Properties/: AssemblyInfo.cs  AssemblyInfo.template.cs
C++/: CMakeLists.txt  IQtest.vcxproj
C++/Includes/: Blemish.h  IQtest.h  Uniformity.h
C++/src/: Blemish.cpp  CMakeLists.txt  Uniformity.cpp  version.h  version.rc  version.rc.in
C++/test/: CMakeLists.txt  IQtest.cpp
